@@ -1,49 +1,1 @@
-# .
-/eclipse-build
-/classes
-**/build
-/idea-build
-**/dist
-**/lib
-**/test-lib
-/*~
-/velocity.log
-/build.properties
-/.idea
-lucene/**/*.iml
-solr/**/*.iml
-parent.iml
-**/*.ipr
-**/*.iws
-/.project
-/.classpath
-/.settings
-/.caches
-/prj.el
-/bin
-/bin.*
-**/pom.xml
-/nbproject
-/nb-build
-
-/solr/package
-
-# can this be minimized?
-/solr/example/start.jar
-/solr/example/webapps/*
-/solr/example/logs/*.log
-/solr/example/**/data
-/solr/example/solr/lib
-/solr/example/solr/logs
-/solr/example/solr/zoo_data
-/solr/example/work/*
-/solr/example/exampledocs/post.jar
-
-/solr/example/example-DIH/**/data
-/solr/example/example-DIH/**/dataimport.properties
-/solr/example/example-DIH/solr/mail/lib/*.jar
-
-solr/contrib/dataimporthandler/test-lib/
-solr/contrib/morphlines-core/test-lib/
-
-solr/core/test-lib/
+/bin/
